# project-bastion

./: .env.example  .gitignore  01_sources_schema.sql  02_sources_catalogue.sql  03_sources_catalogue_part2_and_views.sql  CLAUDE.md  README.md  __init__.py  blob.py  bulk_scraper.py  cli.py  config.py  db.py  dynamic_scraper.py  extractor_base.py  meta_sources.sql  pyproject.toml  ratelimit.py  scraper_base.py  sources.yaml  static_scraper.py  thursday_e2e_test.py  wednesday_e2e_test.py
app/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
app/scripts/: sync-fsp-data.mjs
app/src/: App.tsx  index.css  main.tsx
app/src/components/: DisruptionBanner.tsx  MapView.tsx  PostDetailPanel.tsx  ScenarioSelector.tsx  Sidebar.tsx  StatusPill.tsx  TimelineScrubber.tsx
app/src/hooks/: useFspData.ts  useScenarioState.ts
app/src/lib/: consumption.ts  scenarioEngine.ts  statusDerivation.ts
app/src/types/: index.ts  posts.ts  routes.ts  scenarios.ts  skus.ts  vehicles.ts
bastion/: __init__.py  cli.py
bastion/core/: config.py  ratelimit.py  scraper_base.py
bastion/extractors/: __init__.py  html.py  pdf.py
bastion/scrapers/: dynamic_scraper.py
bastion/sources/: __init__.py  imd_daily_bulletin.py
data/: README.md
data/fsp/: methodology.md  posts.json  routes.json  skus.json  vehicles.json
fsp-demo/: README.md  app.jsx  index.html  lib.jsx  vercel.json
fsp-demo/data/fsp/: scenarios.json
mnt/user-data/outputs/bastion-repo-bundle/bastion/scrapers/: __init__.py
project-bastion/project-bastion/bastion/core/: __init__.py  db_extras.py
project-bastion/project-bastion/bastion/sources/: wikipedia_orbat.py
